{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 17,
  "lineage": "656bddbd-1ac1-c83b-c7ba-e6f8f61eb450",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c07a00162f0def4",
            "association_id": "eipassoc-0e603006d91f55a9a",
            "domain": "vpc",
            "id": "eipalloc-05c07a00162f0def4",
            "instance": "i-0e6341b0acf472f9b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0190ec6f500f8d2ca",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-73-178-15.compute-1.amazonaws.com",
            "public_ip": "52.73.178.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "elasticIP-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internetGatway-vpc-custom",
            "aws_network_interface.networkInterface-app-subnet-public-vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-webServer-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:310476451496:instance/i-0e6341b0acf472f9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6341b0acf472f9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0190ec6f500f8d2ca"
              }
            ],
            "primary_network_interface_id": "eni-0190ec6f500f8d2ca",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "52.73.178.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d689835bc753644e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0186abb72d6a8d422",
            "tags": {
              "Name": "ec2Instance-webServer-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "ec2Instance-webServer-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05862e5f6f6d84f4a"
            ]
          },
          "dependencies": [
            "aws_network_interface.networkInterface-app-subnet-public-vpc-custom",
            "aws_security_group.web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
            "aws_subnet.app-subnet-public-vpc-custom",
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGatway-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:internet-gateway/igw-0b95567e02012d25f",
            "id": "igw-0b95567e02012d25f",
            "owner_id": "310476451496",
            "tags": {
              "Name": "internetGatway-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "internetGatway-vpc-custom",
              "Stack": "production"
            },
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "networkInterface-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:network-interface/eni-0190ec6f500f8d2ca",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b1cf1a4eaad8f388",
                "device_index": 0,
                "instance": "i-0e6341b0acf472f9b"
              }
            ],
            "id": "eni-0190ec6f500f8d2ca",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:f4:d3:b5:20:c5",
            "owner_id": "310476451496",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05862e5f6f6d84f4a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0186abb72d6a8d422",
            "tags": {
              "Name": "networkInterface-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "networkInterface-app-subnet-public-vpc-custom",
              "Stack": "production"
            }
          },
          "dependencies": [
            "aws_security_group.web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
            "aws_subnet.app-subnet-public-vpc-custom",
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:route-table/rtb-0e500b96ecc6ed869",
            "id": "rtb-0e500b96ecc6ed869",
            "owner_id": "310476451496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b95567e02012d25f",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b95567e02012d25f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routeTable-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "routeTable-vpc-custom",
              "Stack": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGatway-vpc-custom",
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeTableAssociation-app-subnet-public-vpc-custom-with-routeTable-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031ba185f79934cab",
            "route_table_id": "rtb-0e500b96ecc6ed869",
            "subnet_id": "subnet-0186abb72d6a8d422"
          },
          "dependencies": [
            "aws_internet_gateway.internetGatway-vpc-custom",
            "aws_route_table.routeTable-vpc-custom",
            "aws_subnet.app-subnet-public-vpc-custom",
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:security-group/sg-05862e5f6f6d84f4a",
            "description": "Allow web \u0026 SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05862e5f6f6d84f4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web trafic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web trafic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH trafic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
            "name_prefix": "",
            "owner_id": "310476451496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "web-ssh-traffic-allowed-securityGroup-app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:subnet/subnet-0186abb72d6a8d422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0186abb72d6a8d422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310476451496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "app-subnet-public-vpc-custom",
              "Stack": "production"
            },
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-private-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:subnet/subnet-0ebe6b4a82bfa6717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe6b4a82bfa6717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310476451496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-private-vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "db-subnet-private-vpc-custom",
              "Stack": "production"
            },
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:subnet/subnet-074d951ba8c008460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074d951ba8c008460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310476451496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-app-subnet-public-vpc-custom",
              "Stack": "development"
            },
            "tags_all": {
              "Name": "dev-app-subnet-public-vpc-custom",
              "Stack": "development"
            },
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-app-subnet-public-vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:subnet/subnet-0472faf7b3702f198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0472faf7b3702f198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310476451496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-app-subnet-public-vpc-custom",
              "Stack": "test"
            },
            "tags_all": {
              "Name": "test-app-subnet-public-vpc-custom",
              "Stack": "test"
            },
            "vpc_id": "vpc-09abaff8b79e6dcea"
          },
          "dependencies": [
            "aws_vpc.vpc-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:310476451496:vpc/vpc-09abaff8b79e6dcea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a95627476dbfb300",
            "default_route_table_id": "rtb-04ab858f10ed88dd1",
            "default_security_group_id": "sg-0c21286190393fa85",
            "dhcp_options_id": "dopt-0d6ac830dd5b87c29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09abaff8b79e6dcea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ab858f10ed88dd1",
            "owner_id": "310476451496",
            "tags": {
              "Name": "vpc-custom",
              "Stack": "production"
            },
            "tags_all": {
              "Name": "vpc-custom",
              "Stack": "production"
            }
          }
        }
      ]
    }
  ]
}